<package>
  <name>full_depthimage_to_laserscan</name>
  <version>0.1.0</version>
  <description>The full_depthimage_to_laserscan package generates a laserscan from a depth image, similar to the depthimage_to_laserscan package. Due to significant optimization, it is capable of processing an entire depth image in less time than the original package required to process a few rows. It is also capable of filtering out points that lie outside of the specified range of heights.</description>
  <maintainer email="jssmith@gatech.edu">Justin Smith</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ivaROS/full_depthimage_to_laserscan</url>
  
  <!-- Original author -->
  <author>Chad Rockey</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
